change new mapper name add new prop at countDown

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -35,7 +35,7 @@ header:
       component: Chip
       componentAttributes:
         textColor: colorName
-      mapper: dateDelivery
+      mapper: deliveryDate
     - name: mediumChipField
       component: MediumChip
     - name: smallChipField
