feat: migrate deliveryDate mapper to date mapper with relative prop
- Remove deliveryDate mapper and consolidate functionality into date mapper
- Add relative prop support for delivery date formatting
- Update all tests and mocks to use new approach
- Maintain backward compatibility

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -35,7 +35,10 @@ header:
       component: Chip
       componentAttributes:
         textColor: colorName
-      mapper: deliveryDate
+      mapper:
+        name: date
+        props:
+          relative: true
     - name: mediumChipField
       component: MediumChip
     - name: smallChipField
