--- a/tests/mocks/schemas/edit-with-remote-actions.yml
+++ b/tests/mocks/schemas/edit-with-remote-actions.yml
@@ -10,6 +10,7 @@ source:
   resolve: false
 saveRedirectUrl: /some-path
 cancelRedirectUrl: /some-path
+hideApplyButton: true
 header:
   title:
     - name: id
