add validations and components

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -369,6 +369,10 @@ sections:
                     referenceValueType: static
                     referenceValue: null
 
+          - name: name
+            component: CopyToClipboardButton
+            componentAttributes: {}
+
           - name: nameGroup
             component: Select
             componentAttributes:
