Added Svg component to browse and edit-new schemas

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -373,6 +373,10 @@ sections:
             component: CopyToClipboardButton
             componentAttributes: {}
 
+          - name: svg
+            component: Svg
+            componentAttributes: {}
+
           - name: nameGroup
             component: Select
             componentAttributes:
